--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ isort = "^5.6.4"
 flake8 = "^3.8.4"
 mypy = "^0.790"
 requests-mock = "^1.8.0"
+pytest-mock = "^3.3.1"
 
 [tool.black]
 line-length = 120
